k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-service
  namespace: hello-app
  labels:
    app: hello-app
spec:
  type: ClusterIP
  selector:
    app: hello-app
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
